--- a/app/src/main/res/layout/item_product_categories.xml
+++ b/app/src/main/res/layout/item_product_categories.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="125dp"
-    android:layout_height="150dp"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="@dimen/mrgn_1"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="125dp"
+    android:layout_height="170dp"
+    android:layout_marginVertical="5dp"
+    android:layout_marginEnd="5dp"
     android:background="@drawable/shape_product_categories">
+
     <ImageView
         android:id="@+id/iv_category_image"
         android:layout_width="100dp"
@@ -14,16 +15,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription"/>
+        tools:ignore="ContentDescription" />
+
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        tools:text="Title"
-        android:textSize="15sp"
+        android:gravity="center_horizontal"
         android:textColor="@color/black"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:gravity="center_horizontal"
-        app:layout_constraintTop_toBottomOf="@id/iv_category_image"/>
+        app:layout_constraintTop_toBottomOf="@id/iv_category_image"
+        tools:text="Title" />
 </androidx.constraintlayout.widget.ConstraintLayout>
