--- a/app/src/main/res/layout/fragment_akun.xml
+++ b/app/src/main/res/layout/fragment_akun.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.homepage.fragment.FragmentAkun">
+
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
         android:elevation="0dp">
+
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/belanja_toolbar"
             android:layout_width="match_parent"
@@ -30,30 +32,37 @@
                 android:textStyle="bold"
                 tools:text="Akun" />
         </androidx.appcompat.widget.Toolbar>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="125dp"
-            android:padding="10dp"
             android:background="@drawable/shape_detail_official_store"
-            android:gravity="start|center">
+            android:gravity="start|center"
+            android:padding="10dp">
+
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_margin="10dp"
-                android:background="@drawable/baseline_person_24_gray"/>
+                android:background="@drawable/baseline_person_24_gray" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_margin="10dp">
+                android:layout_margin="10dp"
+                android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/tv_full_name_akun"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="2"
                     android:text="FULL NAME"
                     android:textColor="@color/white"
-                    android:textStyle="bold"
-                    android:textSize="20sp"/>
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/tv_no_hp_akun"
                     android:layout_width="wrap_content"
@@ -61,22 +70,24 @@
                     android:text="@string/_081xxxxxxx"
                     android:textColor="@color/white"
 
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
             </LinearLayout>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/ll_profil_akun"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
                 android:background="@drawable/custom_edit_text_rounded_corner"
                 android:elevation="10dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
                 android:padding="20dp">
 
                 <ImageView
@@ -92,9 +103,9 @@
                     android:id="@+id/tv_title_setting"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
                     android:text="@string/profil_saya"
                     android:textSize="20sp"
-                    android:layout_marginStart="20dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/iv_logo_1"
                     app:layout_constraintTop_toTopOf="@id/ll_profil_akun"
@@ -109,12 +120,13 @@
                     app:layout_constraintEnd_toEndOf="@id/ll_profil_akun"
                     app:layout_constraintTop_toTopOf="@id/ll_profil_akun" />
             </androidx.constraintlayout.widget.ConstraintLayout>
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/ll_about_app"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/custom_edit_text_rounded_corner"
                 android:elevation="10dp"
@@ -132,9 +144,9 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
                     android:text="Tentang Aplikasi Ini"
                     android:textSize="20sp"
-                    android:layout_marginStart="20dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/iv_logo_2"
                     app:layout_constraintTop_toTopOf="@id/ll_about_app"
@@ -148,12 +160,13 @@
                     app:layout_constraintEnd_toEndOf="@id/ll_about_app"
                     app:layout_constraintTop_toTopOf="@id/ll_about_app" />
             </androidx.constraintlayout.widget.ConstraintLayout>
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/ll_logout_app"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/custom_edit_text_rounded_corner"
                 android:elevation="10dp"
@@ -171,9 +184,9 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
                     android:text="Log Out"
                     android:textSize="20sp"
-                    android:layout_marginStart="20dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/iv_logo_3"
                     app:layout_constraintTop_toTopOf="@id/ll_logout_app"
