layout kategori diubah dikit, riwayat pencarian udah bener secara layout dan data yang harus ditampilin, login udah diperbagus.

--- a/app/src/main/res/layout/item_kategori_produk_search.xml
+++ b/app/src/main/res/layout/item_kategori_produk_search.xml
@@ -10,6 +10,7 @@
         android:id="@+id/iv_gambar_kategori"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:padding="@dimen/mrgn_1"
         android:background="@drawable/shape_product_categories"
         android:src="@drawable/pv_invisible_image"/>
     <TextView
