--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:autofillHints="emailAddress"
                 android:hint="@string/e_mail_address"
-                android:text="tesabi@gmail.com"
+                android:text="tesalonikaabi@gmail.com"
                 android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
 
