--- a/app/src/main/res/layout/activity_product_list_search_produk.xml
+++ b/app/src/main/res/layout/activity_product_list_search_produk.xml
@@ -107,6 +107,7 @@
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:layout_marginStart="@dimen/mrgn_1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/rv_riwayat_pencarian" />
 
@@ -114,6 +115,7 @@
             android:id="@+id/container_fragment_rv_list_kategori"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/mrgn_1"
             app:layout_constraintTop_toBottomOf="@id/tv_title_kategori_pilihan" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
