--- a/app/src/main/res/layout/detail_official_store_toolbar.xml
+++ b/app/src/main/res/layout/detail_official_store_toolbar.xml
@@ -9,38 +9,56 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-    <ImageView
-        android:id="@+id/iv_back_toolbar"
-        android:src="@drawable/baseline_arrow_left_24"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:contentDescription="@string/back_image_view" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_marginStart="40dp"
-        android:id="@+id/tv_toolbar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        tools:text="Official Store" />
+        <ImageView
+            android:id="@+id/iv_back_toolbar"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:contentDescription="@string/back_image_view"
+            android:src="@drawable/baseline_arrow_left_24"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/iv_cart_toolbar"
-        android:layout_marginHorizontal="20dp"
-        android:layout_gravity="end"
-        android:src="@drawable/outline_shopping_basket_24"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:contentDescription="@string/cart_image_view" />
+        <TextView
+            android:id="@+id/tv_toolbar"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="@color/white"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@id/iv_search_toolbar"
+            app:layout_constraintStart_toEndOf="@id/iv_back_toolbar"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Official Store" />
 
-    <ImageView
-        android:id="@+id/iv_search_toolbar"
-        android:layout_gravity="end"
-        android:src="@drawable/baseline_search_24"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:contentDescription="@string/search_image_view" />
+        <ImageView
+            android:id="@+id/iv_cart_toolbar"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="end"
+            android:layout_marginHorizontal="20dp"
+            android:contentDescription="@string/cart_image_view"
+            android:src="@drawable/outline_shopping_basket_24"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/iv_search_toolbar"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="20dp"
+            android:contentDescription="@string/search_image_view"
+            android:src="@drawable/baseline_search_24"
+            app:layout_constraintEnd_toStartOf="@id/iv_cart_toolbar"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.appcompat.widget.Toolbar>
