--- a/app/src/main/res/layout/activity_product_list_search_produk.xml
+++ b/app/src/main/res/layout/activity_product_list_search_produk.xml
@@ -147,7 +147,7 @@
             android:id="@+id/tl_search_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabMode="fixed" />
+            app:tabMode="auto" />
 
         <FrameLayout
             android:id="@+id/container"
