--- a/app/src/main/res/layout/fragment_product_categories_detail.xml
+++ b/app/src/main/res/layout/fragment_product_categories_detail.xml
@@ -7,7 +7,8 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tl_sub_category_product"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        app:tabMode="auto"/>
     <FrameLayout
         android:id="@+id/sub_container"
         android:layout_width="match_parent"
