--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="purple_category">#DBC3F8</color>
     <color name="gray">#808080</color>
     <color name="red">#d00b0b</color>
+    <color name="red2">#e11f27</color>
     <color name="sky_blue">#87CEEB</color>
     <color name = "red_maroon">#800000</color>
     <color name="gray1">#808191</color>
