--- a/app/src/main/res/layout/activity_syarat_ketentuan.xml
+++ b/app/src/main/res/layout/activity_syarat_ketentuan.xml
@@ -41,19 +41,28 @@
             app:layout_constraintStart_toStartOf="@id/ib_back_button"
             app:layout_constraintTop_toBottomOf="@id/v_border"/>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginVertical="5dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_syarat_Title"
+        app:layout_constraintBottom_toTopOf="@id/bt_tutup_gratis_button"
+       >
+
         <TextView
             android:id="@+id/tv_syarat_dan_ketentuan"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="Beli 4 gratis 1 buah kardus susu ultra UHT super nikmat rasa coklat dan stoberi"
             android:textSize="18sp"
             android:textColor="@color/black"
             android:ellipsize="end"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginHorizontal="20dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_syarat_Title"/>
+            android:layout_marginTop="8dp"/>
+
+    </ScrollView>
 
     <Button
         android:id="@+id/bt_tutup_gratis_button"
@@ -64,6 +73,7 @@
         android:text="@string/tutup"
         android:textColor="@color/teal"
         android:textStyle="bold"
+        android:textSize="18sp"
         app:backgroundTint="@null"
         android:paddingVertical="10dp"
         android:layout_margin="10dp"
