--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,18 +16,19 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="40dp"
-        android:orientation="vertical"
         android:background="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
@@ -35,8 +36,8 @@
             android:layout_gravity="center_horizontal"
             android:text="@string/login"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="50sp" />
+            android:textSize="50sp"
+            android:textStyle="bold" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/et_email_edit_layout"
@@ -55,8 +56,8 @@
                 android:layout_height="wrap_content"
                 android:autofillHints="emailAddress"
                 android:hint="@string/e_mail_address"
-                android:text="tesalonikaabi@gmail.com"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                android:text="made@gmail.com" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
@@ -82,8 +83,8 @@
                 android:layout_height="wrap_content"
                 android:autofillHints="password"
                 android:hint="@string/password"
-                android:text="aaaaaaaa"
-                android:inputType="textPassword"/>
+                android:inputType="textPassword"
+                android:text="12345678" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
@@ -94,12 +95,12 @@
 
         <TextView
             android:id="@+id/btn_register"
+            style="@style/TextAppearance.AppCompat.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
             android:layout_gravity="end"
+            android:layout_margin="10dp"
             android:text="@string/register_account"
-            style="@style/TextAppearance.AppCompat.Button"
             android:textSize="15sp" />
 
         <androidx.appcompat.widget.AppCompatButton
