--- a/app/src/main/res/layout/activity_about_app.xml
+++ b/app/src/main/res/layout/activity_about_app.xml
@@ -8,6 +8,37 @@
     android:orientation="vertical"
     tools:context=".presentation.akun.AboutAppActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:background="@drawable/top_drawable_lists"
+        android:elevation="0dp"
+        android:paddingBottom="10dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+        <ImageButton
+            android:id="@+id/btn_banner_back"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginHorizontal="@dimen/mrgn_2"
+            android:background="?android:selectableItemBackground"
+            android:contentDescription="@string/back_image_view"
+            android:src="@drawable/arrow_back" />
+
+        <TextView
+            android:id="@+id/tv_promo_toolbar_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/mrgn_1"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            tools:text="@string/banner_list_title" />
+
+    </androidx.appcompat.widget.Toolbar>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -53,20 +84,18 @@
         android:layout_marginTop="25dp">
 
         <TextView
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_marginHorizontal="20dp"
             android:text="@string/versi_aplikasi"
             android:textColor="@color/gray"
+            android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@id/tv_versi"
-            android:textSize="20sp" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/tv_versi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -75,7 +104,9 @@
             android:text="@string/_4_17_0_4170014"
             android:textColor="@color/black"
             android:textSize="22sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
