--- a/app/src/main/res/layout/fragment_promo.xml
+++ b/app/src/main/res/layout/fragment_promo.xml
@@ -6,6 +6,31 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".presentation.homepage.fragment.FragmentPromo">
+    <androidx.appcompat.widget.Toolbar
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:elevation="0dp"
+        android:background="@color/red"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/tv_toolbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:textColor="@color/white"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            tools:text="Promo"/>
+        <ImageView
+            android:id="@+id/iv_cart_toolbar"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="end|top"
+            android:layout_marginEnd="20dp"
+            android:contentDescription="@string/cart_image_view"
+            android:src="@drawable/outline_shopping_basket_24" />
+    </androidx.appcompat.widget.Toolbar>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
