--- a/app/src/main/res/layout/dialog_logout.xml
+++ b/app/src/main/res/layout/dialog_logout.xml
@@ -35,13 +35,14 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_anda_yakin">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_batal"
-            android:layout_width="wrap_content"
+            android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
@@ -54,12 +55,11 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_ya"
-            android:layout_width="wrap_content"
+            android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:background="@drawable/detail_button_background"
-            android:paddingHorizontal="60dp"
             android:text="@string/ya"
             android:textAllCaps="false"
             android:textColor="@color/white"
