--- a/app/src/main/res/layout/fragment_promo.xml
+++ b/app/src/main/res/layout/fragment_promo.xml
@@ -42,6 +42,7 @@
         app:tabIndicatorColor="@color/teal"
         app:tabIndicatorGravity="stretch"
         app:tabMode="scrollable"
+        android:background="@color/appBackground"
         app:tabSelectedTextColor="@color/white"
         app:textAllCaps="false" />
 
