--- a/app/src/main/res/layout/fragment_product_list_search_product_terlaris.xml
+++ b/app/src/main/res/layout/fragment_product_list_search_product_terlaris.xml
@@ -6,6 +6,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.homepage.components.fragment.productlist.searchview.FragmentProductListSearchProductTerlaris">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_produk_ga_ada"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="400dp"
+            android:layout_height="300dp"
+            android:src="@drawable/produk_ga_ada"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Maaf, kami tidak dapat menemukan apa yang anda cari"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         tools:listitem="@layout/item_product_gratis_product"
         android:id="@+id/rv_product_list_terlaris"
